# src/main/java/com/retail/rewards/controller/CustomerRewardController.java
@@ -3,6 +3,8 @@ package com.retail.rewards.controller;
 import com.retail.rewards.model.Customer;
 import com.retail.rewards.service.CustomerService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -15,24 +17,30 @@ public class CustomerRewardController {
     CustomerService customerService;
 
     @PostMapping("/customers")
-    public List<Customer> createCustomers(@RequestBody List<Customer> customers) {
-        if (customers == null || customers.size() < 1) {
-            throw new IllegalArgumentException("customers objects can not be null");
+    public ResponseEntity<List<Customer>> createCustomers(@RequestBody List<Customer> customers) {
+        List<Customer> createdCustomers = customerService.createCustomers(customers);
+        if (createdCustomers == null) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
-        return customerService.createCustomers(customers);
+        return new ResponseEntity<>(createdCustomers, HttpStatus.CREATED);
     }
 
     @GetMapping("/customer/{id}")
-    public Customer getCustomerById(@PathVariable Long id) {
-        return customerService.getCustomerById(id);
+    public ResponseEntity<Customer> getCustomerById(@PathVariable Long id) {
+        Customer customer = customerService.getCustomerById(id);
+        if (customer == null)
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(customer, HttpStatus.OK);
     }
 
     @PutMapping("/customer")
-    public Customer updateCustomerSubscription(@RequestBody Customer customer) {
-        if (customer == null) {
-            throw new IllegalArgumentException("customer object can not be null");
+    public ResponseEntity<Customer> updateCustomerSubscription(@RequestBody Customer customer) {
+
+        Customer updatedCustomer = customerService.updateCustomerSubscription(customer);
+        if (updatedCustomer == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
-        return customerService.updateCustomerSubscription(customer);
+        return new ResponseEntity<>(updatedCustomer, HttpStatus.OK);
     }
 
 }
